--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bojji The Rock</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://i.pinimg.com/1200x/89/06/de/8906dec57542658ad290810b21f5475d.jpg">
     <script>
         function setUsername(){
             document.getElementById("username-p").innerHTML = document.getElementById("username").value + "'s Gallery";
@@ -19,34 +20,37 @@
         <div class="avatar">
             <div class="profile-img" id="profileImage">
             </div>
-            <div class="noti">
-                1
-            </div>
+            <div class="noti">99+</div>
         </div>
             
         <div class="username">
-            <a href="https://github.com/thananupat0269" class = "on-hover">
-            <p style="font-size: x-large; font-weight: 600;" id="username-p">nuarmmm's Gallery</p>
+            <a href="https://github.com/Yumezuki" class = "on-hover">
+            <p style="font-size: x-large; font-weight: 600;" id="username-p">Bojji's Gallery</p>
             </a>
         </div>
 
         <div class="input-group">
-            <div><label style="font-weight: 400;">Set the username</label><input style="margin-left: 10px;" type="text" 
-                id="username"><button style="margin-left: 10px;" id="setUsername" onclick="setUsername()">set</button></div>
-            <div><label style="font-weight: 400;">Set the profile image URL</label><input style="margin-left: 10px;" type="text" 
-                id="profileimg"><button style="margin-left: 10px;" id="setProfile" onclick="setProfileImage()">set</button></div>
+            <div>
+                <label style="font-weight: 400;"><b>Set the username</b></label>
+                <input type="text" id="username">
+                <button style="margin-left: 10px;" id="setUsername" onclick="setUsername()">set</button></div>
+            <div>
+                <label style="font-weight: 400;"><b>Set the profile image URL</b></label>
+                <input type="text" id="profileimg">
+                <button style="margin-left: 10px;" id="setProfile" onclick="setProfileImage()">set</button>
+            </div>
         </div>
         <div class="gallery">
-            <div class="gallery-item col-span"></div>
-            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/564x/e8/97/07/e897071f33363dd30436b1bb062ad779.jpg);"></div>
-            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/564x/d5/85/2d/d5852dd21ad7d6b5308d57374b0c39a9.jpg);"></div>
-            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/564x/b5/44/30/b54430ea8a3c58cfa93333d11f6922a2.jpg);"></div>
-            <div class="gallery-item row-span"></div>
-            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/564x/93/78/14/937814411de32f9d9d5c73efd51c151d.jpg);"></div>
-            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/736x/90/46/38/904638d0c486cd666b52f4e914613a4e.jpg);"></div>
-            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/564x/89/55/81/895581e5772a535915ecf4f1aa59f39c.jpg);"></div>
-            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/736x/de/e3/29/dee3299ce8a26aee7486d799db2b2f3f.jpg);"></div>
-            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/564x/1a/16/63/1a1663642b55e78ba7be41f781d2db77.jpg);"></div>
+            <div class="gallery-item col-span" style="background-image: url(https://i.pinimg.com/564x/21/03/63/210363a13716ba2d25a639f71f669470.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/564x/ce/1a/69/ce1a697651f54aaa9be9c97c81998208.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/564x/c3/ae/1b/c3ae1b755111ca55403d17f694ba282f.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/564x/cc/93/4f/cc934f57e00ee0a32f64b722eb356e0b.jpg);"></div>
+            <div class="gallery-item row-span" style="background-image: url(https://i.pinimg.com/564x/ea/42/f6/ea42f6e97380bf323774134c657eb42b.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/736x/53/eb/2a/53eb2a15fc8c843f21cbad21d878532a.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/236x/16/b0/ee/16b0ee2b70e83499bb1b32611ae4c804.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/236x/52/0a/5d/520a5d6c316fecd28fc53969ff0b14eb.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/236x/bf/ba/c9/bfbac93d86282ec8a843fe49eef08bb8.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(https://i.pinimg.com/236x/6f/6b/f4/6f6bf4363a91af78c8aebac36a4e425e.jpg);"></div>
         </div>
     </div>
 
